--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^2.2.3",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/koa": "^2.0.48",
@@ -21,6 +22,7 @@
     "@types/koa-router": "^7.0.39",
     "bcrypt": "^3.0.4",
     "jsonwebtoken": "^8.4.0",
+    "kcors": "^2.2.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-multer": "^1.0.2",
